Use getLast, removeFirst, removeLast. A bit of getFirst (#8477)